--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ ADD_EXECUTABLE(test
     unit_test.cpp
     Div.cpp
     Pow.cpp
+    Mult.cpp
+    Add.cpp
+    Sub.cpp
 )
 ADD_EXECUTABLE(lab
 	main.cpp
